--- a/src/color.css
+++ b/src/color.css
@@ -26,4 +26,5 @@
     --list-active-bg-color: #F8F8F8;
     --copyright-box-bg-color: #E7FFE9;
     --option-active-bg-color: #F2F4FF;
+    --page-head-text: #f6fef6;
 }
