--- a/src/components/company_post_box/company_post_box.css
+++ b/src/components/company_post_box/company_post_box.css
@@ -11,6 +11,11 @@
     box-shadow: var(--boxes-shadow-dark);
     position: relative;
 }
+/* when changing grid system */
+.company_post_box_cont_half{
+    width: 48%;
+    margin-right: 10px;
+}
 /* logo and name */
 .company_post_logo_and_name{
     width: 60%;
@@ -65,6 +70,7 @@
     align-items: center;
 }
 .company_counts{
+    min-width: 135px;
     display: flex;
     flex-direction: row;
     align-items: center;
