--- a/src/components/page_head_text/page_head_text.css
+++ b/src/components/page_head_text/page_head_text.css
@@ -6,7 +6,7 @@
     font-size: 18px;
     margin-bottom: 20px;
     font-weight: 500;
-    background-color: var(--secondary-color);
+    background-color: var(--page-head-text);
     color: var(--main-text-color);
     user-select: none;
     letter-spacing: 5px;
