--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,31 +1,105 @@
+@import '../../color.css';
 .home_page_container{
     width: 100%;
 }
-.latest_jobs_container{
+.home_page_what_do_container{
+    width: 95%;
+    max-width: 980px;
+    margin: 0px auto;
+    padding: 100px 0px;
+}
+.home_page_what_do_box{
+    width: 100%;
+    margin-bottom: 100px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--main-border-color);
+    padding: 20px;
+    box-shadow: var(--boxes-shadow-light);
+}
+.home_page_what_do_box_text_and_slider{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.home_page_what_do_box:nth-child(even) .home_page_what_do_box_text_and_slider{
+    flex-direction: row-reverse;
+}
+.home_page_what_do_box_head{
+    width: 100%;
+    text-align: center;
+    font-weight: 700;
+    color: var(--page-text-slogan-color);
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+/* text and button */
+.home_page_what_do_box_text_and_btn{
+    width: 40%;
+    min-height: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.home_page_what_do_box:nth-child(even) .home_page_what_do_box_text_and_btn{
+    align-items: flex-end;
+}
+.home_page_what_do_box_text{
+    width: 100%;
+    color: var(--secondary-text-color);
+}
+.home_page_what_do_box_action_btn{
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding: 10px 30px;
+    border: 1px solid var(--accent-color);
+    border-radius: 10px;
+    font-weight: 500;
+    color: var(--accent-color);
+    background-color: var(--primary-color);
+    margin-top: 50px;
+    transition: 0.3s ease all;
+}
+.home_page_what_do_box_action_btn:hover{
+    background-color: var(--accent-color);
+    color: var(--primary-color);
+}
+.home_page_what_do_box_slider_container{
     width: 60%;
-    margin: 100px auto 0px;
+    padding: 10px;
 }
-/* responsive */
-@media (width <= 1024px){
-    .latest_jobs_container{
-        width: 70%;
+.home_page_what_do_box_slider_container img{
+    width: 100%;
+    box-shadow: var(--boxes-shadow-light);
+}
+@media (width <= 900px){
+    .home_page_what_do_box{
+        margin-bottom: 50px;
+    }
+    .home_page_what_do_box .home_page_what_do_box_text_and_slider, .home_page_what_do_box:nth-child(even) .home_page_what_do_box_text_and_slider{
+        flex-direction: column-reverse;
+    }
+    .home_page_what_do_box_text_and_btn{
+        width: 100%;
+        margin-top: 20px;
+    }
+    .home_page_what_do_box_action_btn{
+        width: 100%;
+        max-width: 395px;
+        margin: 20px auto 0px;
+    }
+    .home_page_what_do_box_slider_container{
+        width: 100%;
+        padding: 0px;
     }
 }
-@media (width <= 850px){
-    .latest_jobs_container{
-        width: 90%;
-        margin-top: 50px;
+@media (width <= 500px){
+    .home_page_what_do_container{
+        padding: 50px 0px;
     }
-}
-/* @media (width <= 650px){
-    .latest_jobs_container{
-        width: 60%;
-        min-width: 330px;
-    }
-} */
-@media (width <= 400px){
-    .latest_jobs_container{
-        width: 90%;
-        min-width: unset;
+    .home_page_what_do_box_head{
+        font-size: 18px;
     }
 }
