--- a/src/color.css
+++ b/src/color.css
@@ -27,4 +27,5 @@
     --copyright-box-bg-color: #E7FFE9;
     --option-active-bg-color: #F2F4FF;
     --page-head-text: #f6fef6;
+    --premium-vacancy-color: #ffd500;
 }
