--- a/src/components/login_form/login_form.css
+++ b/src/components/login_form/login_form.css
@@ -80,11 +80,15 @@
     cursor: pointer;
     user-select: none;
 }
+.login_form_submit_btn_container{
+    width: 100%;
+    margin: 40px 0px 0px;
+    position: relative;
+}
 /* form submit button */
 .login_form_submit_btn{
     width: 100%;
     display: block;
-    margin: 40px 0px 0px;
     font-size: 16px;
     outline: none;
     border: none;
