--- a/src/pages/post_Detail/post_detail.css
+++ b/src/pages/post_Detail/post_detail.css
@@ -275,8 +275,16 @@
 }
 /* relevant vacancies */
 .detail_page_relevant_vacancies{
-    width: 65%;
+    width: 72%;
     margin: 80px auto 50px;
+}
+.detail_latest_jobs_boxes_container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 50px;
 }
 .detail_page_vacancy_buttons_mobile{
     display: none;
