added number formatter

--- a/src/color.css
+++ b/src/color.css
@@ -28,4 +28,6 @@
     --option-active-bg-color: #F2F4FF;
     --page-head-text: #f6fef6;
     --premium-vacancy-color: #ffd500;
+    /* _______________ company profile colors _____________________ */
+    --company-menu_bg-color: #F7F9FF;
 }
