--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,20 @@
 }
 .main_pages_container{
   width: 100%;
-  margin-top: 74.89px;
+  /* margin-top: 74.89px; */
   padding-bottom: 100px;
   background-color: var(--body-bg-color);
+}
+.main_pages_top{
+  /* margin-top: 0px; */
+  padding-bottom: 0px;
 }
 body{
   font-family: 'Roboto', sans-serif;
   color: var(--main-text-color);
 }
-@media (width <= 850px){
+/* @media (width <= 850px){
   .main_pages_container{
     margin-top: 64px;
   }
-}
+} */
