--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,12 +4,15 @@
     width: 100%;
     max-width: 1440px;
     margin: 0px auto;
-    position: fixed;
+    position: sticky;
     top: 0px;
     left: 0px;
     right: 0px;
     z-index: 999;
     user-select: none;
+}
+.header_container_none{
+    display: none;
 }
 .header_scroll_border{
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
@@ -82,13 +85,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: flex-end;
     margin-left: 30px;
 }
 .account_link_btn{
     color: var(--primary-color);
     background-color: var(--accent-color);
     padding: 10px 20px;
+    border: 1px solid var(--accent-color);
     border-radius: 5px;
     transition: 0.3s ease all;
     font-weight: 500;
@@ -100,6 +105,7 @@
 }
 .account_link_btn:hover{
     background-color: var(--accent-hover);
+    border: 1px solid var(--accent-hover);
 }
 .header_login_btn{
     color: var(--accent-color);
@@ -114,6 +120,7 @@
     flex-direction: row;
     align-items: center;
     font-size: 14px;
+    margin-right: 10px;
 }
 .header_login_btn:hover{
     color: var(--primary-color);
@@ -133,9 +140,13 @@
     border: 2px solid var(--primary-color);
     border-radius: 32px;
     overflow: hidden;
+    background-color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .header_profil_picture img{
-    width: 100%;
+    width: 90%;
 }
 .header_mobile_container{
     display: none;
