--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -5,6 +5,17 @@
     margin: 0px auto;
     padding: 50px 0px 100px;
 }
+.new_page_head{
+    width: 100%;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    font-size: 18px;
+    color: var(--page-text-slogan-color);
+    font-weight: 500;
+    user-select: none;
+    letter-spacing: 3px;
+    text-align: center;
+}
 .sign_up_page_box_container{
     width: 80%;
     margin: 50px auto;
@@ -69,5 +80,8 @@
     }
     .sign_up_page_box_body_frame{
         width: 100%;
+    }
+    .new_page_head{
+        font-size: 16px;
     }
 }
