--- a/src/components/company_profile_components/company_profile_menu/company_profile_menu.css
+++ b/src/components/company_profile_components/company_profile_menu/company_profile_menu.css
@@ -1,5 +1,8 @@
+@import '../../../color.css';
+/* menu container */
 .company_profile_menu_container{
     width: 20%;
+    min-width: 270px;
     height: 100vh;
     position: sticky;
     top: 0px;
@@ -7,4 +10,64 @@
     background-color: var(--company-menu_bg-color);
     overflow-y: auto;
     padding: 20px 0px;
+}
+.company_profile_menu_container::-webkit-scrollbar{
+    width: 5px;
+}
+.company_profile_menu_container::-webkit-scrollbar-track {
+    padding: 5px 0px;
+}
+.company_profile_menu_container::-webkit-scrollbar-thumb{
+    border-radius: 5px;
+    background-color: var(--page-text-slogan-color);
+}
+.company_profile_menu_container::-webkit-scrollbar-thumb:hover{
+    background-color: var(--light-text-color);
+}
+/* image and name */
+.company_profile_menu_image_and_name{
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+/* company profile image */
+.company_profile_menu_image{
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.company_profile_menu_image img{
+    width: 35px;
+}
+/* compnay name */
+.company_profile_menu_comName{
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Roboto Slab', serif;
+    color: var(--secondary-text-color);
+}
+.company_profile_menu_rating{
+    display: flex;
+    flex-direction: row;
+}
+.company_profile_menu_rating_value{
+    color: var(--rating-color);
+    margin-right: 5px;
+}
+/* menu items container*/
+.company_profile_menu_items_container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0px;
+}
+.company_profile_menu_items_container li{
+    width: 100%;
 }
