company profile header is ready

--- a/src/color.css
+++ b/src/color.css
@@ -34,4 +34,5 @@
     --company-menu_bg-color: #F7F9FF;
     --company-menu-active: #EBEDFF;
     --company-menu-active-border: #DCDCDC;
+    --notification-count-color: #FF1111;
 }
