--- a/src/components/company_profile_components/company_profile_submenus/company_profile_submenus.css
+++ b/src/components/company_profile_components/company_profile_submenus/company_profile_submenus.css
@@ -13,6 +13,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    transition: 0.3s ease all;
 }
 .company_profile_main_menu_icon_and_icon{
     display: flex;
@@ -23,15 +24,16 @@
     margin-right: 10px;
     font-size: 18px;
     color: var(--light-text-color);
+    transition: 0.3s ease all;
 }
 .company_profile_main_menu_name_close{
-    font-size: 25px;
+    font-size: 20px;
     color: var(--light-text-color);
-    transform: rotate(-180deg);
+    /* transform: rotate(-90deg); */
     transition: 0.3s all;
 }
 .company_profile_main_menu_name_close_rotate{
-    transform: rotate(0deg);
+    transform: rotate(-90deg);
     /* transition: 0.5s all; */
 }
 .company_profile_main_menu_name:hover{
@@ -56,7 +58,7 @@
     max-height: 200px;
     padding-left: 50px;
     margin-top: 10px;
-    transition: 0.5s ease all;
+    transition: 0.3s ease all;
     overflow: hidden;
 }
 .company_profile_submenus_hide{
@@ -64,12 +66,17 @@
     max-height: 0px;
 }
 .company_profile_submenus_link{
-    display: block;
+    /* display: block; */
     width: 100%;
     padding: 10px 20px;
     color: var(--secondary-text-color);
     font-family: 'Roboto Slab', serif;
     border-left: 3px solid var(--company-menu-active-border);
+    transition: 0.3s ease all;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 .company_profile_submenus_link:hover{
     background-color: var(--company-menu-active);
@@ -78,4 +85,21 @@
 .company_profile_submenus_link_active{
     border-left: 3px solid var(--accent-hover);
     color: var(--accent-hover);
+}
+.company_profile_submenus_link_count{
+    margin-left: 10px;
+    letter-spacing: 1px;
+    font-size: 13px;
+    font-weight: 500;
+    background-color: var(--form-inputs-border-color);
+    color: var(--primary-color);
+    border-radius: 10px;
+    padding: 3px 8px;
+    transition: 0.3s ease all;
+}
+.company_profile_submenus_link_active .company_profile_submenus_link_count{
+    background-color: var(--accent-hover);
+}
+.company_profile_submenus_link:hover .company_profile_submenus_link_count{
+    background-color: var(--accent-hover);
 }
