--- a/src/components/custom_select_option/custom_select_option.css
+++ b/src/components/custom_select_option/custom_select_option.css
@@ -75,9 +75,12 @@
     padding: 5px 10px;
     cursor: pointer;
     transition: 0.5s ease all;
-    border-bottom: 1px solid var(--form-inputs-border-color);
+    /* border-bottom: 1px solid var(--form-inputs-border-color); */
     user-select: none;
     color: var(--secondary-text-color);
+}
+.custom_options_sub_list_item{
+    border-bottom: 1px solid var(--form-inputs-border-color);
 }
 .custom_options_list_item:hover, .custom_options_sub_list_item:hover{
     background-color: var(--main-border-color);
@@ -91,6 +94,10 @@
 .custom_options_list_selected{
     background-color: var(--option-active-bg-color);
 }
-.custom_options_list:last-child .custom_options_list_item{
+.custom_options_list:last-child .custom_options_sub_list .custom_options_sub_list_item:last-child{
     border-bottom: none;
+}
+.custom_options_list .custom_options_list_item:has(+ .custom_options_sub_list){
+    /* border-bottom: none; */
+    border-bottom: 1px solid var(--form-inputs-border-color);
 }
